# Honeypot

./: .buildinfo  .dockerignore  .gitignore  .pylintrc  Honeypot.code-workspace  README.md  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
backend/: Dockerfile  backend.html  docker-compose.yaml  modules.html  pyproject.toml  requirements.txt  target_system_provider_pb2.py  target_system_provider_pb2_grpc.py  traffic_limit.sh
backend/backend/: Dockerfile  __main__.py  config.py  container.py  docker-compose.yaml  docker-compose_BACKUP_9869.yaml  filehandler.py  http_server.py  io.py
backend/backend/containerconfig/custom-cont-init.d/: init.sh
backend/backend/containerconfigs/: default.txt  defaulttest.txt
backend/backend/http_server/: __init__.py
backend/custom-cont-init.d/: init.sh
backend/protos/: target_system_provider.proto
backend/target-systems/ssh-server/: Dockerfile
backend/target-systems/ssh-server/custom-cont-init.d/: init.sh
backend/template/config/custom-cont-init.d/: init.sh
backend/tests/: test_container.py  test_example.py  test_http_server.py
database/: docker-compose.yaml
dev/: docker-compose.yaml
docs/: conf.py  generateDocs  index.rst
frontend/: Dockerfile  docker-compose.yaml  frontend.config.html  frontend.database.html  frontend.honeylogger.html  frontend.html  frontend.protocols.html  frontend.protocols.ssh.html  frontend.target_systems.html  genkey  genkeys  modules.html  pyproject.toml  requirements.txt
frontend/config/: database.ini
frontend/frontend/: __main__.py  example.py  main.py
frontend/frontend/config/: config.py
frontend/frontend/database/: __init__.py  config.py  connect.py
frontend/frontend/honeylogger/: __init__.py  _console.py  _postgres.py
frontend/frontend/logging/: __init__.py  _console.py  _postgres.py  _types.py
frontend/frontend/protocols/: command_parser.py  proxy_handler.py  ssh.py  ssh_server.py  ssh_utils.py  sshevents.py  transport_list.py  transport_manager.py
frontend/frontend/protocols/ssh/: __init__.py  _command_parser.py  _proxy_handler.py  _ssh_server.py  _transport_manager.py  connection_manager.py  ssh_server.py
frontend/frontend/target_systems/: __init__.py  _grpc.py  _interface.py
frontend/tests/: test_example.py
frontend/tests/database/: test_connect.py
frontend/tests/logging/: test_postgres.py
frontend/tests/protocols/: test_command_parser.py  test_ssh.py
frontend/tests/protocols/ssh/: test_command_parser.py  test_connection_manager.py  test_proxy_handler.py  test_ssh_server.py  test_transport_manager.py
frontend/tests/target_systems/: test_grpc.py
protocols/: pyproject.toml
protocols/target_system_provider/: target_system_provider.proto  target_system_provider_pb2.py  target_system_provider_pb2_grpc.py
(+25 files in other folders)
