[tool.poetry]
name = "protocols"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "target_system_provider" }
]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.36.1"
grpcio-tools = "^1.36.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
